[gd_scene load_steps=31 format=3 uid="uid://b07cp1sql701x"]

[ext_resource type="Script" uid="uid://d1w7gmsqc1a2w" path="res://intro_player_ui.gd" id="1_b3i7o"]
[ext_resource type="Texture2D" uid="uid://q6tq3c6c2nbd" path="res://assets/UI/invButton.png" id="2_fpvbo"]
[ext_resource type="Texture2D" uid="uid://cm1y3u5fcalkb" path="res://assets/UI/mapButton.png" id="3_24c1j"]
[ext_resource type="Theme" uid="uid://bpude2oeitoox" path="res://assets/Themes/Main_UI_Theme.tres" id="4_h77u7"]
[ext_resource type="Texture2D" uid="uid://blh3tckdgwb0r" path="res://assets/UI/RedX.png" id="5_lh4xd"]
[ext_resource type="Texture2D" uid="uid://c816b4am2lgdg" path="res://assets/UI/Inventory.png" id="6_w20dl"]
[ext_resource type="Texture2D" uid="uid://dq3b21cg4fuy8" path="res://assets/UI/FunPassJr.png" id="7_25tw0"]
[ext_resource type="Texture2D" uid="uid://urwmpackjmpo" path="res://assets/UI/FunPassSr.png" id="8_orujr"]
[ext_resource type="Texture2D" uid="uid://bffoms32sldhx" path="res://assets/UI/Saw.png" id="9_h4ipo"]
[ext_resource type="Texture2D" uid="uid://byv2hai6f75g2" path="res://assets/art/Gun.png" id="10_aoliv"]
[ext_resource type="Texture2D" uid="uid://dytjbknalbb36" path="res://assets/Cab Base/Arcade Machine Stick.png" id="11_b1fmk"]
[ext_resource type="Texture2D" uid="uid://bl0tpvf7ioluq" path="res://assets/UI/JKey.png" id="12_wxsu4"]
[ext_resource type="Texture2D" uid="uid://npqfokrsikot" path="res://assets/UI/TKey.png" id="13_dax4a"]
[ext_resource type="Texture2D" uid="uid://drbe8d3g5fpi4" path="res://assets/Token/Token Space.png" id="14_akmvo"]
[ext_resource type="Texture2D" uid="uid://biovfdi5bv5np" path="res://assets/Token/Token Shooting Range.png" id="15_cw7tk"]
[ext_resource type="Texture2D" uid="uid://dyib5hpye3qyo" path="res://assets/Token/Token Skee ball.png" id="16_ilarw"]
[ext_resource type="Texture2D" uid="uid://bqhtogt15dg8r" path="res://assets/Token/Token Baseball.png" id="17_7mgby"]
[ext_resource type="Texture2D" uid="uid://dom3xjkrrbwbo" path="res://assets/Token/Token Tower.png" id="18_gn3b3"]
[ext_resource type="Texture2D" uid="uid://nng7l7qflqy8" path="res://assets/Tickets/Ticket Space.png" id="19_bs8ip"]
[ext_resource type="Texture2D" uid="uid://cp3foypx1j2kg" path="res://assets/Tickets/Ticket Baseball.png" id="20_vcko0"]
[ext_resource type="Texture2D" uid="uid://bdx3tl8wgqkuq" path="res://assets/Tickets/Ticket Shooting range.png" id="21_pki7l"]
[ext_resource type="Texture2D" uid="uid://thv22n5oohsl" path="res://assets/Tickets/Ticket Tower.png" id="22_rghwn"]
[ext_resource type="Texture2D" uid="uid://decvfdibqy3m6" path="res://assets/Tickets/Ticket SkeeBall.png" id="23_ish7c"]
[ext_resource type="Script" uid="uid://bpuomhrhlixuh" path="res://scenes/playerScenes/volume_slider.gd" id="24_6sf0w"]
[ext_resource type="Texture2D" uid="uid://bu6wx6i0a5f0i" path="res://assets/UI/mapMissing.png" id="25_0q7ua"]
[ext_resource type="Texture2D" uid="uid://do13in58l2eh5" path="res://assets/art/map.png" id="26_xc5kc"]
[ext_resource type="Texture2D" uid="uid://dpn3vnjec682r" path="res://assets/UI/Checkmark.png" id="27_k0lvx"]
[ext_resource type="AudioStream" uid="uid://b7p7j3ki6xoko" path="res://assets/allsound/SFX/Inventory Close.wav" id="28_fpvbo"]
[ext_resource type="AudioStream" uid="uid://w66dwwgi4id0" path="res://assets/allsound/SFX/Inventory Open.wav" id="29_h77u7"]
[ext_resource type="AudioStream" uid="uid://byxgwwx25f0km" path="res://assets/allsound/SFX/Inventory Tab Switch.wav" id="30_lh4xd"]

[node name="introPlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3i7o")

[node name="PauseMenu" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_right = 1.00031
anchor_bottom = 1.0
offset_right = -853.596
offset_bottom = -480.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.8, 1.8)
metadata/_edit_use_anchors_ = true

[node name="colorRects" type="Control" parent="PauseMenu"]
anchors_preset = 0
anchor_right = 0.997193
anchor_bottom = 0.996667
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="PauseMenu/colorRects"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.288534
anchor_top = 0.113712
anchor_right = 0.99812
anchor_bottom = 0.867893
color = Color(0.336374, 0.223497, 0.137891, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect3" type="ColorRect" parent="PauseMenu/colorRects"]
layout_mode = 0
anchor_left = 0.357143
anchor_top = 0.152174
anchor_right = 0.893797
anchor_bottom = 0.832776
offset_bottom = -3.05176e-05
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="PauseMenu/colorRects"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.263158
anchor_bottom = 1.00669
color = Color(0, 0, 0, 0.341176)
metadata/_edit_use_anchors_ = true

[node name="invButSprite" type="Sprite2D" parent="PauseMenu/colorRects"]
texture_filter = 1
position = Vector2(686, 337)
texture = ExtResource("2_fpvbo")

[node name="mapButSprite" type="Sprite2D" parent="PauseMenu/colorRects"]
texture_filter = 1
position = Vector2(690, 190)
texture = ExtResource("3_24c1j")

[node name="quit2" type="Button" parent="PauseMenu"]
texture_filter = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0223888
anchor_top = 0.723149
anchor_right = 0.246381
anchor_bottom = 0.859816
theme = ExtResource("4_h77u7")
theme_override_font_sizes/font_size = 48
text = "QUIT"
metadata/_edit_use_anchors_ = true

[node name="map" type="Button" parent="PauseMenu"]
layout_mode = 0
anchor_left = 0.555764
anchor_top = 0.233333
anchor_right = 0.747891
anchor_bottom = 0.391667
offset_bottom = -1.52588e-05
flat = true
metadata/_edit_use_anchors_ = true

[node name="bugReport" type="Button" parent="PauseMenu"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0223888
anchor_top = 0.308334
anchor_right = 0.246381
anchor_bottom = 0.485001
theme = ExtResource("4_h77u7")
theme_override_font_sizes/font_size = 36
text = "REPORT 
A BUG"
metadata/_edit_use_anchors_ = true

[node name="save" type="Button" parent="PauseMenu"]
visible = false
texture_filter = 2
layout_mode = 0
offset_left = 23.8889
offset_top = 152.778
offset_right = 262.889
offset_bottom = 234.778
theme_override_font_sizes/font_size = 49
text = "SAVE"

[node name="inventory" type="Button" parent="PauseMenu"]
layout_mode = 0
anchor_left = 0.450797
anchor_top = 0.48
anchor_right = 0.825679
anchor_bottom = 0.638333
flat = true
metadata/_edit_use_anchors_ = true

[node name="objective" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0223888
anchor_top = 0.12037
anchor_right = 0.246381
anchor_bottom = 0.255371
theme = ExtResource("4_h77u7")
theme_override_font_sizes/font_size = 36
text = "OBJECTIVE"
metadata/_edit_use_anchors_ = true

[node name="settings" type="Button" parent="PauseMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0223888
anchor_top = 0.533334
anchor_right = 0.246381
anchor_bottom = 0.668334
localize_numeral_system = false
theme = ExtResource("4_h77u7")
theme_override_font_sizes/font_size = 40
text = "SETTINGS"
metadata/_edit_use_anchors_ = true

[node name="inventoryMenu" type="Control" parent="PauseMenu"]
visible = false
anchors_preset = 0
anchor_right = 0.885661
anchor_bottom = 0.828333
metadata/_edit_use_anchors_ = true

[node name="quitInv" type="Button" parent="PauseMenu/inventoryMenu"]
layout_mode = 0
anchor_left = 0.946503
anchor_top = 0.186676
anchor_right = 1.0047
anchor_bottom = 0.303376
offset_right = -6.10352e-05
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 24
icon = ExtResource("5_lh4xd")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Inventory" type="Sprite2D" parent="PauseMenu/inventoryMenu"]
position = Vector2(642.222, 295.556)
scale = Vector2(0.448436, 0.448436)
texture = ExtResource("6_w20dl")

[node name="itemIcons" type="Control" parent="PauseMenu/inventoryMenu"]
texture_filter = 1
anchors_preset = 0
anchor_right = 0.944974
anchor_bottom = 0.987928
metadata/_edit_use_anchors_ = true

[node name="funPassJr" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons"]
visible = false
position = Vector2(611.667, 209.444)
scale = Vector2(0.38342, 0.38342)
texture = ExtResource("7_25tw0")

[node name="funPassSr" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons"]
visible = false
texture_filter = 1
position = Vector2(612.778, 278.889)
scale = Vector2(0.404055, 0.404055)
texture = ExtResource("8_orujr")

[node name="saw" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons"]
visible = false
texture_filter = 1
position = Vector2(797.778, 360)
scale = Vector2(0.49773, 0.49773)
texture = ExtResource("9_h4ipo")

[node name="bbgun" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons"]
visible = false
position = Vector2(790, 251.667)
scale = Vector2(0.507645, 0.507645)
texture = ExtResource("10_aoliv")

[node name="joystick" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons"]
visible = false
texture_filter = 1
position = Vector2(562.431, 362.347)
scale = Vector2(0.502777, 0.502777)
texture = ExtResource("11_b1fmk")

[node name="janitorsKey" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons"]
visible = false
texture_filter = 1
position = Vector2(623.889, 362.778)
rotation = -1.57079
scale = Vector2(2.19244, 2.19244)
texture = ExtResource("12_wxsu4")

[node name="mainDoorKey" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons"]
visible = false
texture_filter = 1
position = Vector2(684.445, 362.778)
rotation = -1.57079
scale = Vector2(2.16168, 2.16168)
texture = ExtResource("13_dax4a")

[node name="tokens" type="Control" parent="PauseMenu/inventoryMenu/itemIcons"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ufoToken" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons/tokens"]
visible = false
position = Vector2(566.667, 141.667)
scale = Vector2(0.55, 0.55)
texture = ExtResource("14_akmvo")

[node name="rangeToken" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons/tokens"]
visible = false
position = Vector2(710, 140)
scale = Vector2(0.541667, 0.541667)
texture = ExtResource("15_cw7tk")

[node name="skeebleToken" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons/tokens"]
visible = false
position = Vector2(852.778, 143.889)
scale = Vector2(0.5625, 0.5625)
texture = ExtResource("16_ilarw")

[node name="speedPitchToken" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons/tokens"]
visible = false
position = Vector2(638.889, 140)
scale = Vector2(0.55, 0.55)
texture = ExtResource("17_7mgby")

[node name="towerToken" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons/tokens"]
visible = false
position = Vector2(782.222, 145.556)
scale = Vector2(0.583333, 0.583333)
texture = ExtResource("18_gn3b3")

[node name="tickets" type="Control" parent="PauseMenu/inventoryMenu/itemIcons"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ufoTicket" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons/tickets"]
visible = false
position = Vector2(463.778, 143.667)
scale = Vector2(0.475214, 0.475214)
texture = ExtResource("19_bs8ip")

[node name="speedPitchTicket" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons/tickets"]
visible = false
position = Vector2(465, 219.444)
scale = Vector2(0.490171, 0.490171)
texture = ExtResource("20_vcko0")

[node name="rangeTicket" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons/tickets"]
visible = false
position = Vector2(466.111, 295.556)
scale = Vector2(0.520994, 0.520994)
texture = ExtResource("21_pki7l")

[node name="towerTicket" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons/tickets"]
visible = false
position = Vector2(465, 369.444)
scale = Vector2(0.508333, 0.508333)
texture = ExtResource("22_rghwn")

[node name="skeebleTicket" type="Sprite2D" parent="PauseMenu/inventoryMenu/itemIcons/tickets"]
visible = false
position = Vector2(461.667, 446.111)
scale = Vector2(0.470299, 0.470299)
texture = ExtResource("23_ish7c")

[node name="objectiveMenu" type="Control" parent="PauseMenu"]
visible = false
layout_mode = 1
anchor_left = 0.356139
anchor_top = 0.155
anchor_right = 0.891284
anchor_bottom = 0.831667
offset_right = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="PauseMenu/objectiveMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00700525
anchor_top = -0.00492611
anchor_right = 1.00525
anchor_bottom = 1.01724
scale = Vector2(0.994755, 0.981129)
color = Color(0.517184, 0.517184, 0.517184, 1)
metadata/_edit_use_anchors_ = true

[node name="objectiveText" type="Label" parent="PauseMenu/objectiveMenu"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0836739
anchor_top = 0.251232
anchor_right = 1.09321
anchor_bottom = 0.650246
scale = Vector2(0.994755, 0.981129)
theme_override_font_sizes/font_size = 28
text = "Find a place to rest."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="QuitObj" type="Button" parent="PauseMenu/objectiveMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.871765
anchor_top = -0.00191571
anchor_right = 0.994526
anchor_bottom = 0.165486
offset_right = -30.0964
offset_bottom = -27.9652
scale = Vector2(1.74322, 1.66707)
icon = ExtResource("5_lh4xd")
flat = true
metadata/_edit_use_anchors_ = true

[node name="settingsMenu" type="Control" parent="PauseMenu"]
visible = false
layout_mode = 1
anchor_right = 1.00469
anchor_bottom = 1.0
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="PauseMenu/settingsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.999063
anchor_bottom = 1.00333
grow_horizontal = 2
grow_vertical = 2
color = Color(0.478431, 0.192157, 0.192157, 1)
metadata/_edit_use_anchors_ = true

[node name="CheckButton" type="CheckButton" parent="PauseMenu/settingsMenu"]
layout_mode = 0
anchor_left = 0.0999688
anchor_top = 0.250926
anchor_right = 0.859369
anchor_bottom = 0.429526
offset_right = -379.28
offset_bottom = -50.16
scale = Vector2(1.88, 1.88)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Performance Mode"
metadata/_edit_use_anchors_ = true

[node name="volumeSlider" type="HSlider" parent="PauseMenu/settingsMenu"]
texture_filter = 1
layout_mode = 0
anchor_left = 0.107779
anchor_top = 0.673333
anchor_right = 0.854733
anchor_bottom = 0.858333
max_value = 1.0
step = 0.001
value = 1.0
script = ExtResource("24_6sf0w")
bus_name = "Master"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PauseMenu/settingsMenu"]
layout_mode = 0
anchor_left = 0.20202
anchor_top = 0.574074
anchor_right = 0.773717
anchor_bottom = 0.735741
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 96
text = "Master Volume"
metadata/_edit_use_anchors_ = true

[node name="quitSettings" type="Button" parent="PauseMenu/settingsMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.854941
anchor_right = 1.00115
anchor_bottom = 0.231667
offset_right = -0.00012207
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 24
icon = ExtResource("5_lh4xd")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="mapMenu" type="Control" parent="PauseMenu"]
visible = false
layout_mode = 1
anchor_left = -0.00208269
anchor_top = 0.05
anchor_right = 0.915443
anchor_bottom = 0.801667
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="PauseMenu/mapMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.39326
anchor_top = 0.23725
anchor_right = 0.969361
anchor_bottom = 0.924612
color = Color(1, 1, 0.745098, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PauseMenu/mapMenu"]
layout_mode = 0
anchor_left = 0.518102
anchor_top = 0.447155
anchor_right = 0.896039
anchor_bottom = 0.875093
offset_left = 3.05176e-05
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 192
text = "???"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="mapMissingSprite" type="Sprite2D" parent="PauseMenu/mapMenu"]
visible = false
position = Vector2(673, 291)
texture = ExtResource("25_0q7ua")

[node name="Map" type="Sprite2D" parent="PauseMenu/mapMenu"]
visible = false
position = Vector2(651.453, 270.972)
scale = Vector2(2.1047, 2.1047)
texture = ExtResource("26_xc5kc")

[node name="quitInv2" type="Button" parent="PauseMenu/mapMenu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.919309
anchor_top = 0.247598
anchor_right = 0.975489
anchor_bottom = 0.376201
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 24
icon = ExtResource("5_lh4xd")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="timer" type="Control" parent="PauseMenu"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="timerLabel" type="Label" parent="PauseMenu/timer"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 17.7778
offset_top = 0.555557
offset_right = 291.778
offset_bottom = 85.5556
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 54
text = "00:00.00"

[node name="ConfirmQuit2" type="Control" parent="PauseMenu"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="PauseMenu/ConfirmQuit2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.478431, 0.192157, 0.192157, 1)

[node name="No" type="Button" parent="PauseMenu/ConfirmQuit2/ColorRect"]
layout_mode = 0
anchor_left = 0.169739
anchor_top = 0.553703
anchor_right = 0.409664
anchor_bottom = 0.98037
icon = ExtResource("5_lh4xd")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Yes" type="Button" parent="PauseMenu/ConfirmQuit2/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.558159
anchor_top = 0.523148
anchor_right = 0.798084
anchor_bottom = 0.949815
grow_horizontal = 0
grow_vertical = 0
icon = ExtResource("27_k0lvx")
flat = true
icon_alignment = 1
expand_icon = true
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="PauseMenu/ConfirmQuit2/ColorRect"]
layout_mode = 0
anchor_right = 0.955951
anchor_bottom = 0.461667
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Are you sure you want to quit?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="controls" type="Control" parent="."]
visible = false
layout_mode = 1
anchor_left = 0.891667
anchor_top = 0.390741
anchor_right = 0.993229
anchor_bottom = 0.619444
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="controls"]
layout_mode = 0
anchor_left = 0.0102564
anchor_top = 0.0688259
anchor_right = 1.00513
anchor_bottom = 0.995951
offset_right = -1.52588e-05
color = Color(0.227451, 0.227451, 0.227451, 0.568627)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="controls"]
texture_filter = 1
layout_mode = 0
anchor_left = 0.025641
anchor_top = 0.1417
anchor_right = 0.994872
anchor_bottom = 0.906883
theme_override_font_sizes/font_size = 28
text = "W A S D   Move
Shift   Sprint
C   Crouch
Space   Interact
Mouse   Camera
ESC       Menu"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="hudTimer" type="Timer" parent="controls"]
wait_time = 10.0
one_shot = true
autostart = true

[node name="pauseClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28_fpvbo")

[node name="OpenSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("29_h77u7")
volume_db = 4.0

[node name="TabSwitch SFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("30_lh4xd")
volume_db = 4.0

[connection signal="pressed" from="PauseMenu/quit2" to="." method="_on_quit_2_pressed"]
[connection signal="pressed" from="PauseMenu/map" to="." method="_on_map_pressed"]
[connection signal="pressed" from="PauseMenu/bugReport" to="." method="_on_bug_report_pressed"]
[connection signal="pressed" from="PauseMenu/inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="PauseMenu/objective" to="." method="_on_objective_pressed"]
[connection signal="pressed" from="PauseMenu/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="PauseMenu/inventoryMenu/quitInv" to="." method="_on_quit_inv_pressed"]
[connection signal="pressed" from="PauseMenu/objectiveMenu/QuitObj" to="." method="_on_quit_obj_pressed"]
[connection signal="pressed" from="PauseMenu/settingsMenu/CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="pressed" from="PauseMenu/settingsMenu/quitSettings" to="." method="_on_quit_settings_pressed"]
[connection signal="pressed" from="PauseMenu/mapMenu/quitInv2" to="." method="_on_quit_inv_2_pressed"]
[connection signal="pressed" from="PauseMenu/ConfirmQuit2/ColorRect/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="PauseMenu/ConfirmQuit2/ColorRect/Yes" to="." method="_on_yes_pressed"]
